# vb.mi-dev

./: .gitignore  CMakeLists.txt  Makefile  README.md
patchers/: g1_gen.maxpat  g2_sfp.maxpat
source/projects/vb.mi.brds_tilde/: CMakeLists.txt
